--- a/service.html
+++ b/service.html
@@ -28,7 +28,7 @@
 
 </head>
 
-<body>
+<body class="sub_page">
 
   <div class="hero_area">
     <!-- header section strats -->
@@ -47,13 +47,13 @@
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav  ">
-              <li class="nav-item active">
+              <li class="nav-item ">
                 <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="about.html"> About</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item active">
                 <a class="nav-link" href="service.html">Services</a>
               </li>
               <li class="nav-item">
@@ -61,7 +61,7 @@
               </li>
             </ul>
             <div class="quote_btn-container">
-              <a href="" class="quote_btn">
+              <a href="contact.html" class="quote_btn">
                 Get A Quote
               </a>
             </div>
@@ -70,102 +70,10 @@
       </div>
     </header>
     <!-- end header section -->
-    <!-- slider section -->
-    <section class="slider_section ">
-      <div id="customCarousel1" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <div class="container ">
-              <div class="row">
-                <div class="col-md-6">
-                  <div class="img-box">
-                    <img src="images/slider-img.png" alt="">
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="detail-box">
-                    <h1>
-                      Rapid Deployment
-                    </h1>
-                    <p>
-                      Accelerate your growth with our Rapid Deployment services. We quickly implement AI solutions, getting you up and running faster to seize market opportunities, drive sales, and boost your lead generation.
-                    </p>
-                    <div class="btn-box">
-                      <a href="contact.html" class="btn1">
-                        Contact Us
-                      </a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item ">
-            <div class="container ">
-              <div class="row">
-                <div class="col-md-6">
-                  <div class="img-box">
-                    <img src="images/slider-img.png" alt="">
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="detail-box">
-                    <h1>
-                      Process Automation
-                    </h1>
-                    <p>
-                      Enjoy streamlined operations and boosted efficiency with intelligent Process Automation. We automate repetitive tasks, reduce errors, and free your team to focus on strategic growth, generating more leads and optimizing your business.
-                    </p>
-                    <div class="btn-box">
-                      <a href="service.html" class="btn1">
-                        Read More
-                      </a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item ">
-            <div class="container ">
-              <div class="row">
-                <div class="col-md-6">
-                  <div class="img-box">
-                    <img src="images/slider-img.png" alt="">
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="detail-box">
-                    <h1>
-                      Dedicated Support
-                    </h1>
-                    <p>
-                      Enjoy dedicated support 24/7 with our AI-powered chatbot assistance. Get instant answers to your questions, troubleshoot issues, and access resources whenever you need them. We ensure seamless help, optimizing your experience and efficiency.
-                    </p>
-                    <div class="btn-box">
-                      <a href="contact.html" class="btn1">
-                        Contact Us
-                      </a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <ol class="carousel-indicators">
-          <li data-target="#customCarousel1" data-slide-to="0" class="active"></li>
-          <li data-target="#customCarousel1" data-slide-to="1"></li>
-          <li data-target="#customCarousel1" data-slide-to="2"></li>
-        </ol>
-      </div>
-
-    </section>
-    <!-- end slider section -->
   </div>
 
   <!-- service section -->
-  <section class="service_section layout_padding">
+   <section class="service_section layout_padding">
     <div class="container">
       <div class="heading_container">
         <h2>
@@ -186,9 +94,9 @@
                 Web Development 
               </h5>
               <p>
-                We create and manage AI-powered websites that convert visitors into leads and streamline operations.
+                Your website is your digital storefront. We design, redesign, develop, and manage high-performing websites that captivate your audience and convert visitors into leads. Crucially, we integrate and manage advanced AI products directly into your site, transforming it into an intelligent lead-generating machine and streamlining your operations.
               </p>
-              <a href="service.html">
+              <a href="https://wa.me/c/254107726085">
                 <span>
                   Read More
                 </span>
@@ -207,9 +115,9 @@
                 AI chatbots
               </h5>
               <p>
-                Our AI chatbots offer 24/7 intelligence, answer queries, qualify leads, and convert prospects efficiently.
+               Equip your business with 24/7 intelligence and effortless communication through our AI Chatbot Systems. We design and implement smart chatbots that instantly answer queries, qualify leads, and streamline interactions across your communication channels, enhancing efficiency and converting prospects into clients.
               </p>
-              <a href="service.html">
+              <a href="https://wa.me/c/254107726085">
                 <span>
                   Read More
                 </span>
@@ -228,9 +136,9 @@
                 Social Media Automaion
               </h5>
               <p>
-                Our AI social media marketing optimizes campaigns, personalizes interactions, boosts engagement, and saves time.
+                Cut through the noise and achieve unparalleled engagement with our intelligent social media marketing. We go beyond basic management, setting up and managing sophisticated AI automation that optimizes your campaigns, personalizes interactions, and delivers consistent results, freeing up your time for what matters most.
               </p>
-              <a href="service.html">
+              <a href="https://wa.me/c/254107726085">
                 <span>
                   Read More
                 </span>
@@ -249,9 +157,9 @@
                 Consulting & Coaching
               </h5>
               <p>
-                Our AI consulting and coaching equips you with insights and strategies for sustainable marketing growth.
+               Gain a competitive edge with our expert AI consulting and coaching. From in-depth market research and analysis powered by AI insights, to comprehensive courses and practical ebooks, we equip you with the knowledge and strategies to effectively implement AI in your marketing and achieve sustainable growth.
               </p>
-              <a href="service.html">
+              <a href="https://wa.me/c/254107726085">
                 <span>
                   Read More
                 </span>
@@ -262,7 +170,7 @@
         </div>
       </div>
       <div class="btn-box">
-        <a href="">
+        <a href="https://wa.me/c/254107726085">
           View More
         </a>
       </div>
@@ -270,92 +178,11 @@
   </section>
   <!-- end service section -->
 
-  <!-- about section -->
-
-  <section class="about_section layout_padding">
-    <div class="container  ">
-      <div class="row">
-        <div class="col-md-6">
-          <div class="detail-box">
-            <div class="heading_container">
-              <h2>
-                About Us
-              </h2>
-            </div>
-            <p>
-              Our mission is to empower businesses and individual brand builders across East Africa to revolutionize their marketing with cutting-edge AI technology. We are dedicated to demystifying AI, making its powerful benefits accessible to local entrepreneurs through strategic digital channels, ultimately driving growth and unprecedented efficiency.
-            </p>
-            <a href="">
-              Read More
-            </a>
-          </div>
-        </div>
-        <div class="col-md-6 ">
-          <div class="img-box">
-            <img src="images/about-img.png" alt="">
-          </div>
-        </div>
-
-      </div>
-    </div>
-  </section>
-
-  <!-- end about section -->
-
-
- 
-
-
-  <!-- contact section -->
-
-  <section class="contact_section layout_padding">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-5 col-lg-4 offset-md-1">
-          <div class="form_container">
-            <div class="heading_container">
-              <h2>
-                Request A Call back
-              </h2>
-            </div>
-            <form action="">
-              <div>
-                <input type="text" placeholder="Full Name " />
-              </div>
-              <div>
-                <input type="email" placeholder="Email" />
-              </div>
-              <div>
-                <input type="text" placeholder="Phone number" />
-              </div>
-              <div>
-                <input type="text" class="message-box" placeholder="Message" />
-              </div>
-              <div class="d-flex ">
-                <button>
-                  SEND
-                </button>
-              </div>
-            </form>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-7 px-0">
-          <div class="map_container">
-            <div class="map">
-              <div id="googleMap"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- end contact section -->
 
   <div class="footer_container">
     <!-- info section -->
 
-<section class="info_section ">
+    <section class="info_section ">
       <div class="container">
         <div class="row">
           <div class="col-md-6 col-lg-3 ">
@@ -441,7 +268,6 @@
         </div>
       </div>
     </section>
-
     <!-- end info section -->
 
     <!-- footer section -->
@@ -465,7 +291,7 @@
   <script src="js/bootstrap.js"></script>
   <script src="js/custom.js"></script>
   <!-- Google Map -->
-  <!-- script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap"></script --!>
+  <!-- script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap"></!--script --!>
   <!-- End Google Map -->
 
 </body>
