--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
+  <meta name="keywords" content="AI marketing East Africa/Digital marketing agency East Africa/AI-powered marketing solutions/Safari Digital Agency/AI for entrepreneurs East Africa/Business growth with AI/Digital innovation East Africa/AI consulting for brands/Marketing efficiency tools/Empowering entrepreneurs with AI" />
+  <meta name="description" content="At Safari Digital Agency, our mission is to empower businesses and individual brand builders across East Africa to revolutionize their marketing with cutting-edge AI technology. We are dedicated to demystifying AI, making its powerful benefits accessible to local entrepreneurs through strategic digital channels, ultimately driving growth and unprecedented efficiency." />
+  <meta name="author" content="Safari-Digital-Agency" />
 
   <title>Safari Digital Agency</title>
+
+  <!-- Favicons -->
+  <link href="/img/favicon.png" rel="icon" />
+  <link href="img/favicon.png" rel="icon" />
 
 
   <!-- bootstrap core css -->
@@ -339,13 +343,7 @@
             </form>
           </div>
         </div>
-        <div class="col-md-6 col-lg-7 px-0">
-          <div class="map_container">
-            <div class="map">
-              <div id="googleMap"></div>
-            </div>
-          </div>
-        </div>
+       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3987.861730578988!2d35.934427009580055!3d-1.7944390363830698!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182e0b5d7a15f407%3A0xfa27c489ade79249!2sSafari%20Digital%20Agency!5e0!3m2!1sen!2ske!4v1749102237433!5m2!1sen!2ske" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </div>
   </section>
