--- a/index.html
+++ b/index.html
@@ -439,6 +439,9 @@
         </div>
       </div>
     </section>
+    
+    <script src="https://cdn.botpress.cloud/webchat/v3.0/inject.js"></script>
+<script src="https://files.bpcontent.cloud/2025/06/06/08/20250606084134-DVN8HJ2Z.js"></script>
 
     <!-- end info section -->
 
